--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Página Web Alberto</title>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
+   <link rel="stylesheet" type="text/css" href="style.css">
+  
 </head>
 
 <body>
 <h1> TIC II </h1>
-<p> Esta es una página web de prueba </p>
+<script src="sketch.js"></script>
 
 </body>
 
