--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
  <div id="fijo">
   <header>
     
-    <div>
-    <h1> Presentación del foro formativo </h1>
+    <div id="mono-platano">
+    <h1> Presentación al Foro </h1>
     <a href=""><img id="mono" src="https://th.bing.com/th/id/R.ea34d6dfb1f03c56e7e04d256422ae39?rik=WTqvmddEks7Kbg&pid=ImgRaw&r=0" alt="logo" height="100px"></a>
     <a href=""><img id="platano" src="https://freepngimg.com/download/banana/1-banana-png-image.png" alt="" height="30px"></a>
+    <h1 id="rico">Gracias!!</h1>
     </div>
     <ul>
        <li><a href="#intro" class="button">Inicio</a></li>
@@ -31,7 +32,7 @@
   <section id="intro">
     <article>
       <h2>Introducción</h2>
-      <p>Mi nombre es Alberto Menéndez. Soy profesor de Tecnología del cuerpo de educación secundaria en el IES Aramo. </p>
+      <p>Mi nombre es Alberto Menéndez. Soy profesor de Tecnología del cuerpo de educación secundaria en el IES Aramo. ¡No te olvides de darle de comer al mono! </p>
       
     </article>
   </section>
