metí la calculadora

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+<script src="https://replit.com/public/js/repl-auth-v2.js"></script>
 </head>
 <body>
 	<h1>
-		Est es un título
+		Est es un título asjsajqajas
 	</h1>
 
 	<h1>
@@ -34,5 +35,6 @@
 	</ol>
 
 	<img src="https://th.bing.com/th/id/OIP.eTCbdR_AFzbqHMPXhrJWUQHaEK?pid=ImgDet&rs=1" height="100" alt="">
+<script type="module">const user = await getUserInfo() </script>
 </body>
 </html>
