--- a/index.html
+++ b/index.html
@@ -8,33 +8,6 @@
 <script src="https://replit.com/public/js/repl-auth-v2.js"></script>
 </head>
 <body>
-	<h1>
-		Est es un título asjsajqajas
-	</h1>
-
-	<h1>
-		Esto es otro título cambiado el 20-01-2023
-    He hecho un cambio nuevo
-	</h1>
-	<ol>
-		<li>Esto es un texto</li>
-		<li>Esto es otro texto</li>
-		<li> <h2>Esto es otro elemento con una lista</h2> 
-			<ul>
-				<li>Elemento dentro de otro elemento</li>
-				</li>
-				<li>Elemento dentro de otro elemento</li>
-				</li>
-				<li>Elemento dentro de otro elemento</li>
-				</li>
-				<li>Elemento dentro de otro elemento</li>
-				</li>
-
-			</ul>
-		</li>
-	</ol>
-
-	<img src="https://th.bing.com/th/id/OIP.eTCbdR_AFzbqHMPXhrJWUQHaEK?pid=ImgDet&rs=1" height="100" alt="">
-<script type="module">const user = await getUserInfo() </script>
+	<iframe src="https://unioviedo-my.sharepoint.com/personal/menendezbalberto_uniovi_es/_layouts/15/Doc.aspx?sourcedoc={7cd2cfe8-a05e-487a-8838-7c12e3ba3aa9}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="800px" height="400px" frameborder="0">Esto es un documento de <a target="_blank" href="https://office.com">Microsoft Office</a> incrustado con tecnología de <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 </body>
 </html>
