--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
 
 <h1>Tecnología y Digitalización</h1>
-	<iframe src="https://unioviedo-my.sharepoint.com/personal/menendezbalberto_uniovi_es/_layouts/15/Doc.aspx?sourcedoc={7cd2cfe8-a05e-487a-8838-7c12e3ba3aa9}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="800px" height="400px" frameborder="0">Esto es un documento de <a target="_blank" href="https://office.com">Microsoft Office</a> incrustado con tecnología de <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+
+	<a href="https://aulasvirtuales.educastur.es/"> Link a la tarea </a>
+	<!--<iframe src="https://unioviedo-my.sharepoint.com/personal/menendezbalberto_uniovi_es/_layouts/15/Doc.aspx?sourcedoc={7cd2cfe8-a05e-487a-8838-7c12e3ba3aa9}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="800px" height="400px" frameborder="0">Esto es un documento de <a target="_blank" href="https://office.com">Microsoft Office</a> incrustado con tecnología de <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+-->
 </body>
 </html>
