--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <h1>Tecnología y Digitalización</h1>
 
-	<a href="https://aulasvirtuales.educastur.es/"> Link a la tarea </a>
+	<a href="https://educastur-my.sharepoint.com/:b:/g/personal/albertombl_educastur_org/EZcQzMH8UVdEth4JJC2AO2IBds1nY_eOUtlaa3XLnrn7WQ?e=fYiFPd" target="_blank"> Link a la tarea </a>
 	<!--<iframe src="https://unioviedo-my.sharepoint.com/personal/menendezbalberto_uniovi_es/_layouts/15/Doc.aspx?sourcedoc={7cd2cfe8-a05e-487a-8838-7c12e3ba3aa9}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="800px" height="400px" frameborder="0">Esto es un documento de <a target="_blank" href="https://office.com">Microsoft Office</a> incrustado con tecnología de <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 -->
 </body>
