--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <h2>4ESO DIGITALIZACIÓN</h2>
 <h3> Prácticas MS Excel </h3>
 	<ul>
-		<li><a href="https://educastur-my.sharepoint.com/:b:/g/personal/albertombl_educastur_org/EZcQzMH8UVdEth4JJC2AO2IBds1nY_eOUtlaa3XLnrn7WQ?e=fYiFPd" target="_blank"> Link a la tarea </a> </li>
+		<li><a href="https://educastur-my.sharepoint.com/:b:/g/personal/albertombl_educastur_org/EZcQzMH8UVdEth4JJC2AO2IBds1nY_eOUtlaa3XLnrn7WQ?e=fYiFPd" target="_blank"> Link a la tarea 1 </a> </li>
+		<li><a href="https://educastur-my.sharepoint.com/:b:/g/personal/albertombl_educastur_org/ES2ahDSj1D5KiRHUmF_VW8EBlIhVujm4tuAZRF3n4xBgog?e=uM3GJ8" target="_blank"> Link a la tarea 2 </a> </li>
+		
 	</ul>
 		
 	
