--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
 		<li><a href="https://educastur-my.sharepoint.com/:b:/g/personal/albertombl_educastur_org/ES2ahDSj1D5KiRHUmF_VW8EBlIhVujm4tuAZRF3n4xBgog?e=uM3GJ8" target="_blank"> Link a la tarea 2 </a> </li>
 		
 	</ul>
-		
+
+<h2>1BACH TECNOLOGÍAS DIGITALES APLICADAS I</h2>
+	<h3> Introducción a la materia </h3>
+		<ul>
+			<li><a href="/TDA/Ficha 1 TIC.docx" target="_blank"> Link a la tarea 1 </a> </li>
+			<li><a href="/TDA/Teoria ficha 1.pdf" target="_blank"> Link a la tarea 2 </a> </li>
+			
+		</ul>		
 	
 <!--<iframe src="https://unioviedo-my.sharepoint.com/personal/menendezbalberto_uniovi_es/_layouts/15/Doc.aspx?sourcedoc={7cd2cfe8-a05e-487a-8838-7c12e3ba3aa9}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="800px" height="400px" frameborder="0">Esto es un documento de <a target="_blank" href="https://office.com">Microsoft Office</a> incrustado con tecnología de <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 -->
