--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <h2>1BACH TECNOLOGÍAS DIGITALES APLICADAS I</h2>
 	<h3> Introducción a la materia </h3>
 		<ul>
-			<li><a href="/TDA/Ficha 1 TIC.docx" target="_blank"> Link a la tarea 1 </a> </li>
-			<li><a href="/TDA/Teoria ficha 1.pdf" target="_blank"> Link a la tarea 2 </a> </li>
+			<li><a href="TDAI/Ficha 1 TIC.docx" target="_blank"> Link a la tarea 1 </a> </li>
+			<li><a href="TDAI/Teoria ficha 1.pdf" target="_blank"> Link a la tarea 2 </a> </li>
 			
 		</ul>		
 	
