--- a/index.html
+++ b/index.html
@@ -21,8 +21,19 @@
 <h3> Prácticas MS Excel </h3>
 	<ul>
 		<li><a href="https://educastur-my.sharepoint.com/:b:/g/personal/albertombl_educastur_org/EZcQzMH8UVdEth4JJC2AO2IBds1nY_eOUtlaa3XLnrn7WQ?e=fYiFPd" target="_blank"> Link a la tarea 1 </a> </li>
+		
 		<li><a href="https://educastur-my.sharepoint.com/:b:/g/personal/albertombl_educastur_org/ES2ahDSj1D5KiRHUmF_VW8EBlIhVujm4tuAZRF3n4xBgog?e=uM3GJ8" target="_blank"> Link a la tarea 2 </a> </li>
 		
+		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EQuTNoHUxh1OhFQaHsJ6AhYB_Rx3gqjciHk6B5Ogamif5w?e=Knzcxe" target="_blank"> Link a la tarea 3  </a> </li>
+		
+		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EVPiYngDF3pGl2e1pvUeXo8BXGD4sWKJO8QyeblKUiwyJw?e=TFRJP6" target="_blank"> Link a la tarea 4  </a> </li>
+		
+		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EXG0QSCICBhMlA6lW3_u7ekBkHhIiGXNrqAjgb8qgwGimQ?e=w3Mowu" target="_blank"> Link a la tarea 5  </a> </li>
+
+		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EcsQ8cfTxiRKuBcYRYB53hUBQj0jpO_ZUtcH7s5xw2HPJA?e=cXCnBs" target="_blank"> Link a la tarea 6 </a> </li>
+		
+		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EdSu8gYm1WZLid_7cSSn-osBzRotriLhgr_i1JI7qj6UEA?e=QTsLzc" target="_blank"> Link a la tarea 7 </a> </li>
+
 	</ul>
 
 <h2>1BACH TECNOLOGÍAS DIGITALES APLICADAS I</h2>
