--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 		
 		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EdSu8gYm1WZLid_7cSSn-osBzRotriLhgr_i1JI7qj6UEA?e=QTsLzc" target="_blank"> Link a la tarea 7 </a> </li>
 
+		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EYwUEhIcEmhIkBDusbjo9rkBpxyDxNOripkedb0tmnTk8Q?e=GzlfDn" target="_blank"> Link a la tarea 8 </a> </li>
+
+		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EQn9JXd6kLNKpj4ZlyEDetMBjmtsrnKF8W9GgVmP4GJMPg?e=YsSVfE" target="_blank"> Link a la tarea 9 </a> </li>
+
 	</ul>
 
 <h2>1BACH TECNOLOGÍAS DIGITALES APLICADAS I</h2>
