--- a/index.html
+++ b/index.html
@@ -1,54 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Página AMBL </title>
-	<meta name="description" content="A website about cool stuff.">
-	<meta name="keywords" content="TyD, Digitalización, Secundaria, Bachillerato, ESO">
-	<link rel="stylesheet" href="style.css">
-	<link rel="icon" href="favicon.png">
-	
-<script src="https://replit.com/public/js/repl-auth-v2.js"></script>
-	
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Página AMBL</title>
+		<meta name="description" content="A website about cool stuff.">
+		<meta name="keywords"
+			content="TyD, Digitalización, Secundaria, Bachillerato, ESO">
+		<link rel="stylesheet" href="style.css">
+		<link rel="icon" href="favicon.png">
 
-<h1>Tecnología y Digitalización   </h1>
+		<script src="https://replit.com/public/js/repl-auth-v2.js"></script>
 
-<h2>4ESO DIGITALIZACIÓN</h2>
-<h3> Prácticas MS Excel </h3>
-	<ul>
-		<li><a href="https://educastur-my.sharepoint.com/:b:/g/personal/albertombl_educastur_org/EZcQzMH8UVdEth4JJC2AO2IBds1nY_eOUtlaa3XLnrn7WQ?e=fYiFPd" target="_blank"> Link a la tarea 1 </a> </li>
+		<script type="module" src="https://md-block.verou.me/md-block.js"></script>
+	</head>
+	<body>
 		
-		<li><a href="https://educastur-my.sharepoint.com/:b:/g/personal/albertombl_educastur_org/ES2ahDSj1D5KiRHUmF_VW8EBlIhVujm4tuAZRF3n4xBgog?e=uM3GJ8" target="_blank"> Link a la tarea 2 </a> </li>
-		
-		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EQuTNoHUxh1OhFQaHsJ6AhYB_Rx3gqjciHk6B5Ogamif5w?e=Knzcxe" target="_blank"> Link a la tarea 3  </a> </li>
-		
-		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EVPiYngDF3pGl2e1pvUeXo8BXGD4sWKJO8QyeblKUiwyJw?e=TFRJP6" target="_blank"> Link a la tarea 4  </a> </li>
-		
-		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EXG0QSCICBhMlA6lW3_u7ekBkHhIiGXNrqAjgb8qgwGimQ?e=w3Mowu" target="_blank"> Link a la tarea 5  </a> </li>
-
-		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EcsQ8cfTxiRKuBcYRYB53hUBQj0jpO_ZUtcH7s5xw2HPJA?e=cXCnBs" target="_blank"> Link a la tarea 6 </a> </li>
-		
-		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EdSu8gYm1WZLid_7cSSn-osBzRotriLhgr_i1JI7qj6UEA?e=QTsLzc" target="_blank"> Link a la tarea 7 </a> </li>
-
-		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EYwUEhIcEmhIkBDusbjo9rkBpxyDxNOripkedb0tmnTk8Q?e=GzlfDn" target="_blank"> Link a la tarea 8 </a> </li>
-
-		<li><a href="https://educastur-my.sharepoint.com/:w:/g/personal/albertombl_educastur_org/EQn9JXd6kLNKpj4ZlyEDetMBjmtsrnKF8W9GgVmP4GJMPg?e=YsSVfE" target="_blank"> Link a la tarea 9 </a> </li>
-
-	</ul>
-
-<h2>1BACH TECNOLOGÍAS DIGITALES APLICADAS I</h2>
-	<h3> Introducción a la materia </h3>
 		<ul>
-			<li><a href="TDAI/Ficha 1 TIC.docx" target="_blank"> Link a la tarea 1 </a> </li>
-			<li><a href="TDAI/Teoria ficha 1.pdf" target="_blank"> Link a la tarea 2 </a> </li>
+			<li><a href="/s1dia.html" target="_blank">S1DIA DIGITALIZACIÓN APLICADA 1 ESO</a></li>
+			<li><a href="/s2tyd.html" target="_blank">S2TYD TECNOLOGÍA Y DIGITALIZACIÓN 2ESO</a></li>
+			<li><a href="/s3tyd.html" target="_blank">S3TYD TECNOLOGÍA Y DIGITALIZACIÓN 3ESO</a></li>
+			<li><a href="/s4digi.html" target="_blank">S4DIGI DIGITALIZACIÓN 4ESO</a></li>
+			<li><a href="/b1tdai.html" target="_blank">B1TDAI TECNOLOGÍAS DIGITALES APLICADAS 1 BACH</a></li>
+
+
+		</ul>
+
 			
-		</ul>		
+
+		<md-block>
+			Este es un bloque para escribir directamente en Markdown. Puedes usarlo para escribir contenido en Markdown y	ver cómo se renderiza en tiempo real. ¡Pruébalo!
+		</md-block>	
 	
-<!--<iframe src="https://unioviedo-my.sharepoint.com/personal/menendezbalberto_uniovi_es/_layouts/15/Doc.aspx?sourcedoc={7cd2cfe8-a05e-487a-8838-7c12e3ba3aa9}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="800px" height="400px" frameborder="0">Esto es un documento de <a target="_blank" href="https://office.com">Microsoft Office</a> incrustado con tecnología de <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
--->
-</body>
+	</body>
 </html>
