--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="keywords"
 			content="TyD, Digitalización, Secundaria, Bachillerato, ESO">
 		<link rel="stylesheet" href="estilo.css">
+		
 		<link rel="icon" href="favicon.png">
 
 		<script src="https://replit.com/public/js/repl-auth-v2.js"></script>
@@ -17,29 +18,11 @@
 	</head>
 	<body>
 
-		<div class="header"></div>
+		<div class="header">
 			<h1>Página AMBL</h1>
 			<h2>Un sitio web sobre cosas tecnológicas de secundaria y bachillerato</h2>
 		</div>
-		<style>
-			.header {
-				text-align: center;
-				padding: 20px;
-				background-color: #9db3b9;
-				border-bottom: 2px solid #ccc;
-				margin: 0;
-			}
-			.header h1 {
-				margin: 0;
-				font-size: 2.5em;
-				color: #333;
-			}
-			.header h2 {
-				margin: 0;
-				font-size: 1.5em;
-				color: #666;
-			}
-		</style>
+		
 		
 		<ul class="lista_sin_estilo">
 			<li><a href="/s1dia.html" target="_blank">S1DIA DIGITALIZACIÓN APLICADA 1 ESO</a></li>
@@ -49,11 +32,42 @@
 			<li><a href="/b1tdai.html" target="_blank">B1TDAI TECNOLOGÍAS DIGITALES APLICADAS 1 BACH</a></li>
 		</ul>
 
+		
+		
+		<p>La tecnología es una herramienta poderosa que ha transformado la manera en que vivimos, trabajamos y nos comunicamos. A través del conocimiento y la innovación tecnológica, hemos logrado avances significativos en medicina, educación, transporte y muchos otros campos. La tecnología no solo facilita nuestras vidas, sino que también abre nuevas oportunidades para el progreso y el desarrollo humano. Al entender y aprovechar el potencial de la tecnología, podemos enfrentar desafíos globales, mejorar la calidad de vida y construir un futuro más sostenible y equitativo para todos. ¡Sigue explorando y aprendiendo sobre tecnología, y sé parte del cambio positivo en el mundo!</p>
+<!--
+			<div class="flex-container">
+				<div class="flex-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vestibulum enim sit amet est finibus rhoncus. Praesent ut eleifend sem. Mauris quis ante erat. Nam posuere sit amet lectus in consectetur. Nulla in ultrices dui. Proin tincidunt, nisi hendrerit dignissim ullamcorper, metus erat finibus nulla, sed porta orci enim vitae diam. Nam tincidunt velit dui, a scelerisque dui commodo sagittis. Nunc condimentum et ipsum nec viverra. Suspendisse convallis egestas augue ut ornare.</div>
+				<div class="flex-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vestibulum enim sit amet est finibus rhoncus. Praesent ut eleifend sem. Mauris quis ante erat. Nam posuere sit amet lectus in consectetur. Nulla in ultrices dui. Proin tincidunt, nisi hendrerit dignissim ullamcorper, metus erat finibus nulla, sed porta orci enim vitae diam. Nam tincidunt velit dui, a scelerisque dui commodo sagittis. Nunc condimentum et ipsum nec viverra. Suspendisse convallis egestas augue ut ornare.</div>
+				<div class="flex-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vestibulum enim sit amet est finibus rhoncus. Praesent ut eleifend sem. Mauris quis ante erat. Nam posuere sit amet lectus in consectetur. Nulla in ultrices dui. Proin tincidunt, nisi hendrerit dignissim ullamcorper, metus erat finibus nulla, sed porta orci enim vitae diam. Nam tincidunt velit dui, a scelerisque dui commodo sagittis. Nunc condimentum et ipsum nec viverra. Suspendisse convallis egestas augue ut ornare.</div>
+				<div class="flex-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vestibulum enim sit amet est finibus rhoncus. Praesent ut eleifend sem. Mauris quis ante erat. Nam posuere sit amet lectus in consectetur. Nulla in ultrices dui. Proin tincidunt, nisi hendrerit dignissim ullamcorper, metus erat finibus nulla, sed porta orci enim vitae diam. Nam tincidunt velit dui, a scelerisque dui commodo sagittis. Nunc condimentum et ipsum nec viverra. Suspendisse convallis egestas augue ut ornare. 4</div>
+				<div class="flex-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vestibulum enim sit amet est finibus rhoncus. Praesent ut eleifend sem. Mauris quis ante erat. Nam posuere sit amet lectus in consectetur. Nulla in ultrices dui. Proin tincidunt, nisi hendrerit dignissim ullamcorper, metus erat finibus nulla, sed porta orci enim vitae diam. Nam tincidunt velit dui, a scelerisque dui commodo sagittis. Nunc condimentum et ipsum nec viverra. Suspendisse convallis egestas augue ut ornare. 5</div>
+				<div class="flex-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vestibulum enim sit amet est finibus rhoncus. Praesent ut eleifend sem. Mauris quis ante erat. Nam posuere sit amet lectus in consectetur. Nulla in ultrices dui. Proin tincidunt, nisi hendrerit dignissim ullamcorper, metus erat finibus nulla, sed porta orci enim vitae diam. Nam tincidunt velit dui, a scelerisque dui commodo sagittis. Nunc condimentum et ipsum nec viverra. Suspendisse convallis egestas augue ut ornare. 6</div>
+				<div class="flex-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vestibulum enim sit amet est finibus rhoncus. Praesent ut eleifend sem. Mauris quis ante erat. Nam posuere sit amet lectus in consectetur. Nulla in ultrices dui. Proin tincidunt, nisi hendrerit dignissim ullamcorper, metus erat finibus nulla, sed porta orci enim vitae diam. Nam tincidunt velit dui, a scelerisque dui commodo sagittis. Nunc condimentum et ipsum nec viverra. Suspendisse convallis egestas augue ut ornare. 7</div>
+				<div class="flex-item">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vestibulum enim sit amet est finibus rhoncus. Praesent ut eleifend sem. Mauris quis ante erat. Nam posuere sit amet lectus in consectetur. Nulla in ultrices dui. Proin tincidunt, nisi hendrerit dignissim ullamcorper, metus erat finibus nulla, sed porta orci enim vitae diam. Nam tincidunt velit dui, a scelerisque dui commodo sagittis. Nunc condimentum et ipsum nec viverra. Suspendisse convallis egestas augue ut ornare. 8</div>
+			</div>
 			
 
-		<md-block>
-			Este es un bloque para escribir directamente en Markdown. Puedes usarlo para escribir contenido en Markdown y	ver cómo se renderiza en tiempo real. ¡Pruébalo!
-		</md-block>	
+			<style>
+				.flex-container {
+					display: flex;
+					flex-wrap: wrap;
+					justify-content: space-around;
+				}
+				.flex-item {
+					background-color: #f1f1f1;
+					border: 1px solid #ccc;
+					padding: 20px;
+					margin: 10px;
+					flex: 1 1 calc(25% - 40px); /* 25% width minus margin and padding */
+					box-sizing: border-box;
+					text-align: center;
+				}
+			</style>
+-->
+		
+
+		
 	<footer>
 		<div class="footer-content">
 			<p>&copy; 2023 Página AMBL. Todos los derechos reservados.</p>
@@ -62,7 +76,8 @@
 				Síguenos en:
 				<a href="https://twitter.com/paginaambl" target="_blank">Twitter</a> |
 				<a href="https://facebook.com/paginaambl" target="_blank">Facebook</a> |
-				<a href="https://instagram.com/paginaambl" target="_blank">Instagram</a>
+				<a href="https://instagram.com/paginaambl" target="_blank">Instagram</a> |
+				<a href="https://educastur.sharepoint.com/:l:/s/escultorjefatura/FDHWA4nlVqlIiWZo-ZjXavgBqiHVYz0x3YCVub2eR3-NZg?nav=MGIzYjZmOWQtZjZlYS00MjVmLWI3M2YtMmRjNTVkNWJiY2Fj" target="_blank">Comunicación de incidencias</a>
 			</p>
 		</div>
 		<style>
