--- a/calculadorabaremo.html
+++ b/calculadorabaremo.html
@@ -145,7 +145,7 @@ function accion() {
 <p>3.3 Publicaciones de carácter didáctico y científico directamente relacionadas con aspectos generales del currículo: <input type="number" id="vcc" value=0> (suma hasta 1 punto, esta aplicación solo da una estimación)</p>
 </div>
 
-<center><input type="button" name="Botón" value="Calcular la puntuación aproximada" onclick = "accion()" style="font-size:24px;center;"></center>
+<center><input type="button" name="calculateButton" value="Calcular la puntuación aproximada" onclick = "accion()" ></center>
 
 </form>
 <div class="bloque">
