--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			content="TyD, Digitalización, Secundaria, Bachillerato, ESO">
 		<link rel="stylesheet" href="estilo.css">
 		
+		
 		<link rel="icon" href="favicon.png">
 
 		<script src="https://replit.com/public/js/repl-auth-v2.js"></script>
@@ -25,7 +26,30 @@
 		
 		
 		<ul class="lista_sin_estilo">
-			<li><a href="/s1dia.html" target="_blank">S1DIA DIGITALIZACIÓN APLICADA 1 ESO</a></li>
+			
+			<li>
+				<a href="/s1dia.html" target="_blank">S1DIA DIGITALIZACIÓN APLICADA 1 ESO</a>
+				<ul class="lista_sin_estilo">
+					<li><a href="/s1dia/1.html" target="_blank">1. Introducción a la tecnología</a></li>
+					<li><a href="/s1dia/2.html" target="_blank">2. Hardware y software</a></li>
+					<li><a href="/s1dia/3.html" target="_blank">3. Internet y redes</a></li>
+					<li><a href="/s1dia/4.html" target="_blank">4. Seguridad y privacidad</a></li>
+					<li><a href="/s1dia/5.html" target="_blank">5. Programación y robótica</a></li>
+					<li><a href="/s1dia/6.html" target="_blank">6. Proyecto final</a></li>
+				</ul>
+			</li>
+			<style>
+				.lista_sin_estilo ul {
+					display: none;
+					
+				}
+				.lista_sin_estilo li:hover > ul {
+					display: block;
+					margin: 0;
+					padding: 0;
+				}
+			</style>
+			</li>
 			<li><a href="/s2tyd.html" target="_blank">S2TYD TECNOLOGÍA Y DIGITALIZACIÓN 2ESO</a></li>
 			<li><a href="/s3tyd.html" target="_blank">S3TYD TECNOLOGÍA Y DIGITALIZACIÓN 3ESO</a></li>
 			<li><a href="/s4digi.html" target="_blank">S4DIGI DIGITALIZACIÓN 4ESO</a></li>
