--- a/prueba.html
+++ b/prueba.html
@@ -5,8 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Esto es una prueba</title>
-</head>
+	<link rel="stylesheet" href="estilos.css">
 <body>
-	<h1>Esto es un título</h1>
+	<h1 >Esto es un título</h1>
+	<p>Me gusta jugar en clase mientras otros hacen tarreas: IO</p>
 </body>
 </html>
