--- a/ialberto.html
+++ b/ialberto.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>T1 · ml5.js + cámara + detección</title>
 
-  <!-- Librería ml5.js -->
-  <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script>
+  <!-- Librería ml5.js 
+  <script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script>-->
+   <script src="https://unpkg.com/ml5@0.12.2/dist/ml5.min.js"></script>
 
   <style>
     body { font-family: system-ui, Arial, sans-serif; margin: 16px; }
