--- a/ialberto.html
+++ b/ialberto.html
@@ -33,6 +33,12 @@
     <video id="video" autoplay playsinline muted></video>
     <canvas id="overlay"></canvas>
   </div>
+ <div>
+       <h3> Explicación de cómo funciona el código</h3>
+        
+       <p> Sustituye este párrafo por una explicación, en varios párrafos de lo que hace el script que se ha incluido en esta tarea. Es un script muy avanzado para vosotros, pero sí estáis en condiciones de analizarlo parte a parte y ver que hace cada parte. Cuanto mejor esté explicado, mejor será la nota en la tarea. Una explicación de un párrafo tendrá poca nota </p>
+
+      </div>
 
   <script>
     const btnStart = document.getElementById("btnStart");
